--- a/build.gradle
+++ b/build.gradle
@@ -12,20 +12,25 @@ buildscript {
         versionCode = 1
         versionName = '1.0'
 
-        // support dependency versions
-        kotlin_version = '1.3.61'
+        // Kotlin
+        kotlin_version = '1.3.71'
         ktx_version = '1.2.0'
 
+        // LiveData & ViewModel
+        lifecycle_version = "2.2.0"
+
+        // Design
         appcompat_version = "1.1.0"
         design_version = '29.0.0'
         material_version = '1.1.0'
 
+        // Navigation Controller
+        nav_version = "2.3.0-alpha04"
+
+        // Constraint Layout
         constraintlayout_version = '2.0.0-beta4'
 
-        nav_version = "2.3.0-alpha02"
-
-        lifecycle_version = "2.2.0"
-
+        // Google
         gson_version = '2.8.6'
     }
 
@@ -35,7 +40,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:3.6.1'
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
