- integrate network library

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-
-API_DEVELOPMENT_URL="https://mcstaging.lilyanncabinets.com/"
-
-API_LIVE_URL="https://mcstaging.lilyanncabinets.com/"
+API_DEVELOPMENT_URL="https://api.plingo.com/api/"
+API_LIVE_URL="https://api.plingo.com/api/"
