--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-API_DEVELOPMENT_URL="https://api.plingo.com/api/"
-API_LIVE_URL="https://api.plingo.com/api/"
+API_DEVELOPMENT_URL=""
+API_LIVE_URL=""
