--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,10 @@ buildscript {
         material_version = '1.1.0'
 
         // Navigation Controller
-        nav_version = "2.3.0-alpha06"
+        nav_version = '2.3.0-beta01'
 
         // Constraint Layout
-        constraintlayout_version = '2.0.0-beta4'
+        constraintlayout_version = '2.0.0-beta6'
 
         // Google
         gson_version = '2.8.6'
